--- a/css/main.css
+++ b/css/main.css
@@ -170,3 +170,62 @@ footer span {
 	color: #45610E;
 	font-size: 0.875rem;
 }
+
+/************ Tablet Media Query ************/
+@media all and (min-width: 768px) {
+
+	.bottom-section .content-wrapper {
+		justify-content: space-evenly;
+	}
+
+	.section-one {
+		width: 26%;
+		/*width: 29px;*/
+		border: none;
+	}
+
+	.section-two {
+		width: 40%;
+		/*width: 42px;*/
+		border-left: 5px solid #EEE;
+		border-right: 5px solid #EEE;
+		border-bottom: none;
+		padding: 0 30px;
+	}
+	
+	.section-three {
+		width: 26%;
+		/*width: 29px;*/
+	}
+}
+
+/************ Desktop Media Query ************/
+@media all and (min-width: 1200px) {
+	body {
+		font-size: 1em;
+	}
+
+	header .content-wrapper {
+		justify-content: space-between;
+		align-items: center;
+		padding: 20px;
+	}
+
+	header h1 {
+		width: 30%;
+		padding: 0;
+		border-bottom: none;
+		text-align: left;
+	}
+
+	header nav {
+		width: 25%;
+		padding: 0;
+	}
+	
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
+
+}
